Handle specific case: 0 letter difference between the 2 names Fixes #3

--- a/style/calc.css
+++ b/style/calc.css
@@ -45,6 +45,10 @@
 
     display: none;
 }
+#remaining-letters-special-case-msg {
+    font-size: small;
+    display: none;
+}
 
 #flames {
     color: purple;
