Update CSS to use dynamic viewport units (dvw, dvh) for responsive design

--- a/style/calc.css
+++ b/style/calc.css
@@ -16,7 +16,7 @@
         font-size: x-large;
     }
     .calc-name {
-        width: 90vw;
+        width: 90dvw;
     }
 }
 .calc-name > .strike-letter {
