--- a/style/main.css
+++ b/style/main.css
@@ -3,6 +3,9 @@ body {
     color: whitesmoke;
     user-select: none;
 }
+* {
+    font-family: monospace;
+}
 .no-js {
     position: absolute;
     left: 50%;
@@ -19,6 +22,7 @@ body {
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 
     border-radius: 10px;
 
@@ -28,7 +32,14 @@ body {
     scrollbar-width: none;
     -ms-overflow-style: none;
 }
-
+h1 {
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#desc {
+    font-size: medium;
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 
 .slide {
